fix: remove spacing between tab and content

--- a/tasklist/client/src/v2/TaskDetailsHistoryView/styles.module.scss
+++ b/tasklist/client/src/v2/TaskDetailsHistoryView/styles.module.scss
@@ -11,6 +11,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin-top: calc(-1 * var(--cds-spacing-04));
 }
 
 .tableContainer {
